<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Medicine Reminder</string>
    <string name="action_settings">Settings</string>
    <string name="configure">Configure</string>
    <string name="genderLabel">Gender</string>
    <string name="complexityLabel">Interface</string>
    <string name="continueLabel">Continue</string>
    <string name="takenMedicine">Taken Medicine</string>
    <string name="newMedicine">Add New Medicine</string>
    <string name="allMedicines">All My Medicines</string>
    <string name="todayMedicines">Today\'s Medicines</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="notifyTime">%1$02d:%2$02d</string>
    <string name="notifyTimeLabel">Notification Time</string>
    <string name="editTime">Edit Time</string>

</resources>
