<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Dashboard">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/takenMedicine"
        android:id="@+id/medicineTaken"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:onClick="takenMedicine" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newMedicine"
        android:id="@+id/addNewMedicine"
        android:layout_below="@+id/medicineTaken"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="addNewMedicine" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allMedicines"
        android:id="@+id/allMedicines"
        android:layout_below="@+id/addNewMedicine"
        android:layout_alignParentLeft="true"
        android:longClickable="true"
        android:layout_alignParentRight="true"
        android:onClick="allMedicines" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todayMedicines"
        android:id="@+id/todayMedicines"
        android:longClickable="true"
        android:layout_below="@+id/allMedicines"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="todayMedicines" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configure"
        android:id="@+id/configure"
        android:longClickable="true"
        android:onClick="configure"
        android:layout_below="@+id/todayMedicines"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

</RelativeLayout>
