<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".NewMedicine"
    android:focusable="false"
    android:clickable="false">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/nameRow"
        android:weightSum="4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Name"
            android:id="@+id/nameLabel"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:layout_weight="3" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameRow"
        android:layout_alignParentLeft="true"
        android:id="@+id/descRow"
        android:weightSum="4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Description"
            android:id="@+id/descriptionLabel"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/description"
            android:layout_weight="3" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/descRow"
        android:layout_alignParentLeft="true"
        android:id="@+id/notifyRow"
        android:weightSum="4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/notifyTimeLabel"
            android:id="@+id/notifyLabel"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/notifyTime"
            android:layout_weight="2" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTime"
            android:onClick="openDatePicker"
            android:text="@string/editTime"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/notifyRow"
        android:layout_alignParentLeft="true"
        android:id="@+id/schedTypeRow"
        android:weightSum="4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Schedule Type"
            android:id="@+id/schedTypeLabel"
            android:layout_weight="1" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/schedType"
            android:layout_weight="3"
            android:entries="@array/schedTypes"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/schedTypeRow"
        android:layout_alignParentLeft="true"
        android:id="@+id/dayIntRow"
        android:weightSum="4"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Day Interval"
            android:id="@+id/dayIntLabel"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/dayInt"
            android:layout_weight="3"
            android:entries="@array/schedTypes"
            android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/schedTypeRow"
        android:layout_alignParentLeft="true"
        android:id="@+id/schedDayRow"
        android:weightSum="4"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Scheduled Days"
            android:id="@+id/schedDayLabel"
            android:layout_weight="1" />
    <LinearLayout
        android:layout_width="0dip"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:id="@+id/schedDaylayout"
        android:orientation="vertical">
        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/schedMonday"
            android:text="@string/monday"/>
        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/schedTuesday"
            android:text="@string/tuesday"/>
        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/schedWednesday"
            android:text="@string/wednesday"/>
        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/schedThursday"
            android:text="@string/thursday"/>
        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/schedFriday"
            android:text="@string/friday"/>
        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/schedSaturday"
            android:text="@string/saturday"/>
        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/schedSunday"
            android:text="@string/sunday"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="Save"
        android:onClick="onSave" />
</RelativeLayout>
