<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Configure">

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gender"
        android:layout_centerHorizontal="true"
        android:spinnerMode="dialog"
        android:layout_below="@+id/genderLabel"
        android:layout_alignParentLeft="true"
        android:entries="@array/gender"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/genderLabel"
        android:id="@+id/genderLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/complexityLabel"
        android:id="@+id/complexityLabel"
        android:layout_below="@+id/gender"
        android:layout_alignParentLeft="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/complexity"
        android:spinnerMode="dialog"
        android:layout_below="@+id/complexityLabel"
        android:entries="@array/complexity"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continueLabel"
        android:id="@+id/submitButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="savePreferences"/>

</RelativeLayout>
